test_suite/tests/compile_error_cases/duplicate_attr_2.stderr
error: duplicate moq attribute: `default`
 --> tests/compile_error_cases/duplicate_attr_2.rs:4:11
  |
4 |     #[moq(default = "i64")]
  |           ^^^^^^^^^^^^^^^
