test_suite/tests/compile_error_cases/duplicate_attr_2.rs
#[moq::automock]
trait Trait {
    #[moq(default = "i32")]
    #[moq(default = "i64")]
    type Type;
}

fn main() {}
